# causal-agent-bench

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: leaderboard.yml  test.yml
docs/: ARXIV-SUBMISSION-PACKET.md  DR-OPE-DESIGN.md  METRICS.md  PHASE-3-VALIDATION-REPORT.md  PHASE-4-GATING-PROTOCOL.md  RELEASE-CHECKLIST.md  RESULTS.md  ROADMAP.md  SUBMISSION-LOG.md  SUBMITTING.md  UPLOAD-CHECKLIST.md  upstream_issue_draft.md  upstream_sources.md
scripts/: generate_synthetic_fixture.py
src/causal_agent_bench/: __init__.py  cli.py  dr_ope.py  evaluation.py  leaderboard.py  leaderboard_cli.py  loader.py  propensity_estimator.py  reward_model.py  router.py  schema.py
src/causal_agent_bench/loaders/: __init__.py  routerbench.py
src/causal_agent_bench/routers/: __init__.py  contextual_thompson.py  popularity.py  thompson.py
tests/: test_cli.py  test_contextual_thompson_router.py  test_dr_ope.py  test_evaluation.py  test_leaderboard.py  test_leaderboard_cli.py  test_loader.py  test_loaders_routerbench.py  test_package.py  test_popularity_router.py  test_propensity_estimator.py  test_reward_model.py  test_router.py  test_schema.py  test_thompson_router.py
tests/fixtures/: synthetic_router_decisions.jsonl  synthetic_router_decisions_large.jsonl
